Add magnifying glass to search bar and style it

--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,8 @@ body {
 
 /****** MAIN PAGE******/
 .wrapper {
-	width: 50%;
+	width: 80%;
+	max-width: 600px;
 	margin: 12rem auto;
 	text-align: center;
 }
@@ -86,10 +87,26 @@ body {
 }
 .search {
 	width: 100%;
+	height: 44px;
 	border-radius: 20px;
 	border: 0.5px solid rgba(0, 0, 0, 0.87);
+	display: flex;
+	align-items: center;
 }
-.search-bar {
+
+.search__magnify {
+	width: 20px;
+	height: 20px;
+	color: #9aa0a6;
+	margin-left: 1rem;
+}
+
+.search__magnify svg {
+	width: 100%;
+	height: 100%;
+}
+
+.search__bar {
 	padding: 1rem;
 	width: 80%;
 	border-style: none;
