--- a/styles/style.css
+++ b/styles/style.css
@@ -73,8 +73,8 @@ body {
 /****** MAIN PAGE******/
 .wrapper {
 	width: 80%;
-	max-width: 600px;
-	margin: 12rem auto;
+	max-width: 580px;
+	margin: 5rem auto;
 	text-align: center;
 }
 
@@ -92,13 +92,13 @@ body {
 	border: 0.5px solid rgba(0, 0, 0, 0.87);
 	display: flex;
 	align-items: center;
+	justify-content: space-evenly;
 }
 
 .search__magnify {
 	width: 20px;
 	height: 20px;
 	color: #9aa0a6;
-	margin-left: 1rem;
 }
 
 .search__magnify svg {
@@ -106,6 +106,15 @@ body {
 	height: 100%;
 }
 
+.search__microphone {
+	width: 24px;
+	height: 24px;
+}
+
+.search__microphone svg {
+	width: 100%;
+	height: 100%;
+}
 .search__bar {
 	padding: 1rem;
 	width: 80%;
