--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,7 @@ footer {
 }
 
 .footer li {
-	margin: 0.5rem;
+	margin: 0.5rem 1.5rem;
 }
 
 .footer a {
@@ -222,10 +222,12 @@ footer {
 	.footer__middle {
 		order: 0;
 		width: 100%;
+		margin: 0.5rem 0 2rem;
 	}
 
 	.footer__left {
 		order: 1;
+		margin-bottom: 2rem;
 	}
 
 	.footer__right {
